# postech-fase1

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  requirements.txt
backend/: .env.example  Dockerfile  Dockerfile.prod  alembic.ini  env.example  pyproject.toml  script-fase2.sh  test-dependencies.sh
backend/alembic/: env.py
backend/alembic/versions/: 20914c34038b_criação_de_tabelas_iniciais.py  312e7294b8ed_criação_de_tabelas_iniciais.py  3fa8eed3119e_criação_de_categorias_default.py  406649bad7e7_adicionar_coluna_observacoes_pedidos.py  64c459dea633_altera_tipo_da_primary_key_da_tabela_.py  6d0212687665_criação_de_categorias_default.py  8c6b783e25a3_adicionar_campos_mercadopago.py  9c4a9953f05f_adicionar_campo_observacoes_pedidos.py  a500ce3feb64_criar_unique_constraints.py  ac0c3d079b11_initial_migration.py  b50c36ddab38_colunas_novas_em_tb_produtos.py  bf181f001f8d_initial_migration.py  dbcc67a08953_inserir_categorias_default.py  e6cb164e3c94_corrigir_modelos.py  mercadopago_integration.py
backend/k8s/: README.md  app-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  postgres-persistent-volume.yaml  secret.yaml
backend/script/: popular_tb_produtos.py
backend/scripts/: deploy-k8s.sh  popular_tb_produtos.py  test-validations.py
backend/src/: logging_config.py  main.py
backend/src/application/services/: cliente_service.py  pagamento_service.py  pedido_service.py  produto_service.py
backend/src/clean_architecture/api/: dependencies.py
backend/src/clean_architecture/controllers/: cliente.py  (+4 more)
(+134 files in other folders)
